<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.bfazeli.homework3.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_tip"
            app:destination="@id/nav_tip"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_nav_dice"
            app:destination="@id/nav_dice"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:launchSingleTop="false"
            app:popUpTo="@+id/nav_home"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_tip"
        android:name="com.bfazeli.homework3.ui.tip.TipCalculatorFragment"
        android:label="@string/menu_tip" />

    <fragment
        android:id="@+id/nav_dice"
        android:name="com.bfazeli.homework3.ui.dice.PairOfDiceFragment"
        android:label="@string/menu_dice"
        tools:layout="@layout/fragment_pair_of_dice" />

</navigation>